apps/golang-test-app-2/base/golang-test-app-2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: golang-test-app-2-svc
  namespace: golang-test-app-2
  annotations:
    external-dns.alpha.kubernetes.io/hostname: golang-test-app-2.diegoluisi.eti.br
  labels:
    app: golang-test-app-2
    version: 0.0.1
    backstage.io/kubernetes-id: golang-test-app-2
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: golang-test-app-2
